[package]
name = "sdi-snapshot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Snapshot assembly, delta, and persistence for sdi-rust"

[features]
# Gates FS-touching code (write_snapshot, enforce_retention, Snapshot::load).
# Default ON for sdi-pipeline; OFF for sdi-core's WASM-compatible build.
pipeline-records = ["dep:tempfile"]
default = ["pipeline-records"]

[dependencies]
sdi-config    = { workspace = true }
sdi-graph     = { workspace = true }
sdi-detection = { workspace = true }
sdi-patterns  = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
blake3        = { workspace = true }
tempfile      = { workspace = true, optional = true }
tracing       = { workspace = true }

[dev-dependencies]
tempfile      = { workspace = true }
proptest      = { workspace = true }
sdi-graph     = { workspace = true }
sdi-detection = { workspace = true }
sdi-patterns  = { workspace = true }
