[package]
name = "sdivi-detection"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native Leiden community detection for sdivi-rust"
readme = "README.md"
keywords = ["sdivi", "leiden", "community-detection", "graph", "clustering"]
categories = ["algorithms", "development-tools"]

[features]
# Placeholder for consistency with the other compute crates. No sdivi-parsing dep
# needed here since Leiden operates on graph structures, not FeatureRecords.
pipeline-records = []
default = ["pipeline-records"]
# Enables the cross-check suite against leidenalg (requires Python + leidenalg).
verify-leiden = []

[dependencies]
sdivi-config  = { workspace = true }
sdivi-graph   = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
rand        = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
proptest     = { workspace = true }
tempfile     = { workspace = true }
sdivi-graph    = { workspace = true, features = ["pipeline-records"] }
sdivi-parsing  = { workspace = true }
sdivi-pipeline = { workspace = true }
