[package]
name = "sdivi-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Dependency graph construction for sdivi-rust"
readme = "README.md"
keywords = ["sdivi", "code-divergence", "graph", "dependency", "coupling"]
categories = ["development-tools", "algorithms", "data-structures"]

[features]
# Enables the sdivi-parsing dep and build_dependency_graph(records) path.
# Default ON for sdivi-pipeline; OFF for sdivi-core's WASM-compatible build.
pipeline-records = ["dep:sdivi-parsing"]
default = ["pipeline-records"]

[dependencies]
sdivi-config  = { workspace = true }
sdivi-parsing = { workspace = true, optional = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
petgraph    = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
sdivi-lang-rust       = { path = "../sdivi-lang-rust" }
sdivi-lang-python     = { path = "../sdivi-lang-python" }
sdivi-lang-typescript = { path = "../sdivi-lang-typescript" }
sdivi-lang-javascript = { path = "../sdivi-lang-javascript" }
sdivi-lang-go         = { path = "../sdivi-lang-go" }
sdivi-lang-java       = { path = "../sdivi-lang-java" }
sdivi-config          = { workspace = true }
tempfile              = { workspace = true }
