[package]
name = "sdivi-lang-go"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Go language adapter for sdivi-rust"
readme = "README.md"
keywords = ["sdivi", "code-divergence", "tree-sitter", "parsing", "go"]
categories = ["development-tools", "parser-implementations"]

[features]
lang-go = []

[dependencies]
sdivi-parsing    = { workspace = true }
tree-sitter    = { workspace = true }
tree-sitter-go = { workspace = true }
