[package]
name = "sdivi-lang-java"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Java language adapter for sdivi-rust"
readme = "README.md"
keywords = ["sdivi", "structural-divergence", "tree-sitter", "parsing", "java"]
categories = ["development-tools", "parser-implementations"]

[features]
lang-java = []

[dependencies]
sdivi-parsing      = { workspace = true }
tree-sitter      = { workspace = true }
tree-sitter-java = { workspace = true }
