[package]
name = "sdivi-lang-javascript"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "JavaScript language adapter for sdivi-rust"
readme = "README.md"
keywords = ["sdivi", "structural-divergence", "tree-sitter", "parsing", "javascript"]
categories = ["development-tools", "parser-implementations"]

[features]
lang-javascript = []

[dependencies]
sdivi-parsing            = { workspace = true }
tree-sitter            = { workspace = true }
tree-sitter-javascript = { workspace = true }
