[package]
name = "sdivi-lang-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rust language adapter for sdivi-rust"
readme = "README.md"
keywords = ["sdivi", "structural-divergence", "tree-sitter", "parsing", "rust"]
categories = ["development-tools", "parser-implementations"]

[features]
lang-rust = []
# Enables ACTIVE_TREES counter in sdivi-parsing for CST-drop invariant tests.
test-tree-counter = ["sdivi-parsing/test-tree-counter"]

[dependencies]
sdivi-parsing      = { workspace = true }
tree-sitter      = { workspace = true }
tree-sitter-rust = { workspace = true }

[dev-dependencies]
sdivi-config = { workspace = true }
tempfile   = { workspace = true }
