[package]
name = "sdivi-parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "File discovery and AST parsing stage for sdivi-rust"
readme = "README.md"
keywords = ["sdivi", "code-divergence", "parsing", "tree-sitter", "ast"]
categories = ["development-tools", "parser-implementations"]

[features]
# Enables ACTIVE_TREES counter for CST-drop invariant tests.
test-tree-counter = []

[dependencies]
sdivi-config = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
walkdir    = { workspace = true }
globset    = { workspace = true }
ignore     = { workspace = true }
rayon      = { workspace = true }
rayon-core = { workspace = true }   # explicit cap on transitive dep MSRV

[dev-dependencies]
sdivi-lang-rust       = { path = "../sdivi-lang-rust", features = ["test-tree-counter"] }
sdivi-lang-python     = { workspace = true }
sdivi-lang-typescript = { workspace = true }
sdivi-lang-javascript = { workspace = true }
sdivi-lang-go         = { workspace = true }
sdivi-lang-java       = { workspace = true }
sdivi-graph           = { workspace = true, features = ["pipeline-records"] }
tempfile = { workspace = true }
proptest = { workspace = true }
