[package]
name = "sdivi-patterns"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pattern fingerprinting and catalog for sdivi-rust"
readme = "README.md"
keywords = ["sdivi", "structural-divergence", "patterns", "fingerprint", "catalog"]
categories = ["development-tools", "algorithms"]

[features]
# Enables the sdivi-parsing dep and build_catalog(records) path.
# Default ON for sdivi-pipeline; OFF for sdivi-core's WASM-compatible build.
pipeline-records = ["dep:sdivi-parsing"]
default = ["pipeline-records"]

[dependencies]
sdivi-config  = { workspace = true }
sdivi-parsing = { workspace = true, optional = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
blake3      = { workspace = true }
globset     = { workspace = true }

[dev-dependencies]
serde_json    = { workspace = true }
sdivi-parsing   = { workspace = true }
sdivi-lang-rust = { workspace = true }
sdivi-config    = { workspace = true }
proptest      = { workspace = true }
